<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/edit_inventory_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/colorPrimaryLight"
            android:scaleType="centerCrop"/>


        <!-- Item category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="Item"/>

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_inventory_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_inventory_name"
                    android:inputType="textCapWords"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="Quantity"/>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_inventory_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_inventory_quantity"
                    android:inputType="number"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="Price"/>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_inventory_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_inventory_price"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Supplier email -->
        <LinearLayout
            android:id="@+id/supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/email"/>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_email"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier"/>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Supplier drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="end"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/order_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_local_grocery_store_black_48dp"
                android:padding="16dp"
                android:text="@string/order_inventory"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/change_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/colorSecondaryText"
                android:text="@string/modify_quantity"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/buy_sell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/default_zero"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/editorTextLabels"
                android:text="Delete Inventory"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>